# tanh-tooling

./: .gitignore  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: clang-check.yml  release-js.yml  release-python.yml
clang/: clang-format  clang-tidy  install.sh
js/: index.js  package.json  prettier.config.base.js  tsconfig.base.json
plugins/tanh-tools/.claude-plugin/: plugin.json
plugins/tanh-tools/agents/: dsp-reviewer.md
plugins/tanh-tools/hooks/: check.sh  format.sh  hooks.json  lint.sh  typecheck.sh
plugins/tanh-tools/skills/crossplatform-audio/: SKILL.md
plugins/tanh-tools/skills/crossplatform-audio/references/: android.md  ios.md  linux.md
python/: README.md  pyproject.toml
python/src/tanh_tooling/: __init__.py  _cli.py
python/src/tanh_tooling/data/: pyright_base.json  ruff_base.toml
