[project]
name = "tanh-tooling"
version = "0.1.1"
description = "tanh-lab shared Python developer configuration (ruff + pyright bases) and a sync CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.14",
    "pyright>=1.1.400",
] # co-pin the tools to the config

[[project.authors]]
name = "Fares Schulz"

[project.scripts]
tanh-tooling = "tanh_tooling._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tanh_tooling"]
# data/ lives inside the package dir, so ruff_base.toml / pyright_base.json
# ship with the wheel automatically — no extra include needed.
